Tester/Errors/test-errors-syntax.err
  File ".\Scripts\test-errors-syntax.py", line 2
    print 'starting'
                   ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print('starting')?
